Dreamview: fixed components status' alignment issue (#1619)

--- a/modules/dreamview/frontend/src/styles/main.scss
+++ b/modules/dreamview/frontend/src/styles/main.scss
@@ -1138,17 +1138,18 @@ body {
     }
 
     .status-display {
+        display: flex;
+        flex-wrap: nowrap;
+        justify-content: space-between;
         min-width: 250px;
         padding: 5px 20px 5px 5px;
 
         .name {
-            display: inline-block;
             padding: 10px;
             min-width: 80px;
         }
 
         .status {
-            display: inline-block;
             position: relative;
             width: 130px;
             padding: 10px;
